2004-01-07  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : rename TreeView.RowExpand to GetRowExpanded.
	* gtk/gtk-api.xml : regen

2004-01-07  John Luke  <jluke@cfl.rr.com>

	* gtk/Dialog.custom: add AddActionWidget overload

2004-01-07  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : TreeStore.Remove iter should be ref
	* gtk/gtk-api.xml : regen

2004-01-06  John Luke  <jluke@cfl.rr.com>

	* gtk/Gtk.metadata: change uint to GtkAccelKey for Widget.AddAccelerator
	* gtk/gtk-api.xml: regenerated
	
2004-01-05  Mike Kestner  <mkestner@ximian.com>

	* configure.in : tagged 0.15 and updated version.

2003-12-30  Mike Kestner  <mkestner@ximian.com>

	* glib/Object.cs (ConnectDefaultHandlers): reflection code to
	hook up overridden default signal handlers.
	* glue/type.c  (gtksharp_override_virtual_method): peek the gtype
	and ref the class if it isn't created yet.
	* sample/Subclass.cs : update to override Button.OnClicked.

2003-12-26  Mike Kestner  <mkestner@ximian.com>

	* glue/selectiondata.c : new glue to make SelectionData opaque
	* glue/Makefile.am : add file
	* glue/makefile.win32 : add file
	* gtk/Gtk.metadata : mark SelectionData opaque, unhide Set method
	* gtk/SelectionData.custom : invoke glue methods for opaque fields.
	* gtk/gtk-api.xml : regen
	* sample/TestDnd.cs : update to new SelectionData API.

2003-12-24  John Luke  <jluke@cfl.rr.com>

	* gtk/Label.custom: add public default constructor
	* gtk/gtk-api.xml:
	* gtk/Gtk.metadata: make gtk_label_new_with_mnemonic the
	preferred constructor, disable protected default ctor

2003-12-21  John Luke  <jluke@cfl.rr.com>

	* glib/Idle.cs: add Remove method found in Alp Toker's platano
	
2003-12-16  Joe Shaw  <joe@ximian.com>

	* generator/SymbolTable.cs (MangleName): Add "lock" and "callback"
	to the list of names that need to be mangled.  The former is a C#
	reserved keyword and the latter is already used as an argument to
	methods which marshal callbacks.
