@@ -1,0 +1,14 @@
+//
+//  RadioButton.custom
+//
+//	Author:  John Luke  <jluke@cfl.rr.com>
+//
+
+	[DllImport("libgtk-win32-2.0-0.dll")]
+	static extern IntPtr gtk_radio_button_new_with_mnemonic (IntPtr group, string label);
+
+	// creates a new group for this RadioButton
+	public RadioButton (string label)
+	{
+		Raw = gtk_radio_button_new_with_mnemonic (IntPtr.Zero, label);
+	}
