@@ -5411,9 +5411,9 @@
       <method name="GetType" cname="gtk_radio_button_get_type" shared="true">
         <return-type type="GType" />
       </method>
-      <constructor cname="gtk_radio_button_new">
+      <constructor cname="gtk_radio_button_new" hidden="1">
         <parameters>
-          <parameter type="GSList*" name="group" null_ok="1" />
+          <parameter type="GSList*" name="group" />
         </parameters>
       </constructor>
       <constructor cname="gtk_radio_button_new_from_widget">
@@ -5421,21 +5421,21 @@
           <parameter type="GtkRadioButton*" name="group" />
         </parameters>
       </constructor>
-      <constructor cname="gtk_radio_button_new_with_label">
+      <constructor cname="gtk_radio_button_new_with_label" hidden="1">
         <parameters>
-          <parameter type="GSList*" name="group" null_ok="1" />
+          <parameter type="GSList*" name="group" />
           <parameter type="const-gchar*" name="label" />
         </parameters>
       </constructor>
-      <constructor cname="gtk_radio_button_new_with_label_from_widget">
+      <constructor cname="gtk_radio_button_new_with_label_from_widget" hidden="1">
         <parameters>
           <parameter type="GtkRadioButton*" name="group" />
           <parameter type="const-gchar*" name="label" />
         </parameters>
       </constructor>
-      <constructor cname="gtk_radio_button_new_with_mnemonic" preferred="1">
+      <constructor cname="gtk_radio_button_new_with_mnemonic" hidden="1">
         <parameters>
-          <parameter type="GSList*" name="group" null_ok="1" />
+          <parameter type="GSList*" name="group" />
           <parameter type="const-gchar*" name="label" />
         </parameters>
       </constructor>
@@ -7292,7 +7292,7 @@
       <property name="Family" cname="family" type="gchar*" readable="true" writeable="true" />
       <property name="Style" cname="style" type="PangoStyle" readable="true" writeable="true" />
       <property name="Variant" cname="variant" type="PangoVariant" readable="true" writeable="true" />
-      <property name="Weight" cname="weight" readable="true" writeable="true" type="PangoWeight" hidden="1" />
+      <property name="Weight" cname="weight" type="gint" readable="true" writeable="true" hidden="1" />
       <property name="Stretch" cname="stretch" type="PangoStretch" readable="true" writeable="true" />
       <property name="Size" cname="size" type="gint" readable="true" writeable="true" />
       <property name="Scale" cname="scale" type="gdouble" readable="true" writeable="true" />
@@ -8861,7 +8861,7 @@
           <parameter type="GtkTreeViewColumn*" name="column" />
         </parameters>
       </method>
-      <method cname="gtk_tree_view_row_expanded" name="RowExpand">
+      <method cname="gtk_tree_view_row_expanded" name="GetRowExpanded">
         <return-type type="gboolean" />
         <parameters>
           <parameter type="GtkTreePath*" name="path" />
