@@ -1,3 +1,11 @@
+2004-01-09  John Luke  <jluke@cfl.rr.com>
+
+	* gtk/Gtk.metadata: Hide most RadioButton constructors, for
+	api reasons
+	* gtk/RadioButton.custom: add ctor to create a new RadioButton
+	with its own group to avoid having to pass null
+	* gtk/gtk-api.xml: regen
+	
 2004-01-07  Mike Kestner  <mkestner@ximian.com>
 
 	* gtk/Gtk.metadata : rename TreeView.RowExpand to GetRowExpanded.
